--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "acme-posts-app",
   "version": "1.0.0",
   "scripts": {
+    "install:all": "npm install --prefix server && npm install --prefix client",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "npm --prefix server run dev",
     "dev:client": "npm --prefix client run dev"
